--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,17 @@
 @import "base/vars";
+@import "base/animations";
 
 * {
     font-family: "Museo Sans Cyrl", sans-serif;
 }
+.container {
+    max-width: 950px;
+    margin: 0 auto;
+}
+
+@import "blocks/buttons";
+@import "blocks/header";
+@import "blocks/promo";
+@import "blocks/advantages";
+
+@import "media";
