--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -1,7 +1,6 @@
 .button {
     width: 150px;
     height: 30px;
-    // padding: 7px 8px;
     background-color: $main-color;
     border-radius: 5px;
     text-transform: uppercase;
@@ -19,5 +18,16 @@
         height: 54px;
         font-size: 16px;
         line-height: 25px;
+    }
+    &_submit {
+        width: 100%;
+        height: 58px;
+        font-size: 16px;
+        line-height: 25px;
+    }
+    &_catalog {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
     }
 }
