pageUp and validate fix

--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -9,3 +9,14 @@
         transform: scale(1);
     }
 }
+
+@keyframes feedback-animation {
+    0% {
+        transform: translateY(200%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
