--- a/src/scss/blocks/_catalog.scss
+++ b/src/scss/blocks/_catalog.scss
@@ -128,6 +128,10 @@
             margin-bottom: 0;
             list-style-type: none;
             position: relative;
+            ul {
+                padding: 0;
+                margin: 0;
+            }
             &_active {
                 margin-left: 0;
                 transform: translateX(-100%);
