--- a/src/scss/blocks/_feedback.scss
+++ b/src/scss/blocks/_feedback.scss
@@ -5,6 +5,7 @@
         margin-top: 60px;
         animation-name: feedback-animation;
         animation-duration: 2s;
+        animation-timing-function: ease;
     }
     &__img {
         width: 169px;
@@ -31,15 +32,4 @@
         color: #0D0D0D;
     }
 
-}
-
-@keyframes feedback-animation {
-    0% {
-        transform: translateY(500px);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
 }
