--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -47,4 +47,9 @@
             background-color: darken($color: $main-color, $amount: 10%);
         }
     }
+    iframe {
+        width: 100%;
+        height: 720px;
+        border: none;
+    }
 }
